Bug 166186 - Showing the context menu for in-place editing ends in-place editing (x11 only)
Summary: Showing the context menu for in-place editing ends in-place editing (x11 only)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-14 22:52 UTC by Jim Raykowski
Modified: 2025-04-21 22:41 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2025-04-14 22:52:31 UTC
Steps to reproduce using SAL_USE_VCLPLUGIN=gen environment variable:

1. Open Writer and insert a bookmark in a document (Menu>Insert>Bookmark...)
2. Start in-place editing of the inserted bookmark text by doing Menu>Insert>Bookmark... and clicking on the text in the Text column of the inserted bookmark until in-place editing starts.
3. Left-click on the text being edited.

Results: The editing context popup menu appears and in-place editing ends. Selecting an item from the popup menu doesn't give expected end results.

Additional: This can also be reproduced in the Draw Navigator when using in-place editing to rename an object.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8f83baab5e62e669cce3691788183ee2ff9a2a7b
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2025-04-21 15:43:12 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8316409b68a97f0129b1fd67bcb8c61a7010ceec

Resolves tdf#166186 Showing the context menu for in-place editing

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.