Resolves tdf#166186 Showing the context menu for in-place editing

ends in-place editing (x11 only)

Fixing this revealed that ESC ends in-place editing when the popup
menu is active. Esc a second time ends the popup menu. This patch
fixes this issue as well.

Change-Id: Ia617d27fcdf7221263bc9b2ae96d8a8ebf934fc4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184400
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>